# mtf

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  mypy.ini  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: branch-naming.yml  ci.yml
src/mtf/: example.py  schema.py
src/mtf/plan/: graph.py  models.py  node.py
src/mtf/plan/schema/: plan.xsd
src/mtf/pylint_plugins/: __init__.py  pydantic_boundary.py
tests/a_unit/: test_example.py  test_plan_graph.py  test_pydantic_boundary.py  test_schema.py
tests/fixtures/: invalid_plan.xml  sample_plan.xml
