[project]
name = "mtf"
version = "0.1.0"
description = "Machine Tools Factory"
authors = [
    {name = "Allen Day",email = "allenday@allenday.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pylint (>=3.3.4,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "networkx (>=3.2.1,<4.0.0)",
    "lxml (>=5.1.0,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "mtf", from = "src" }
]

# Code formatting

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
commitizen = "^4.2.1"
pydantic = "^2.6.1"
pydantic-ai = "^0.0.24"
types-networkx = "^3.4.2.20241227"
lxml-stubs = "^0.5.1"
radon = "^6.0.1"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

# Linting
[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name - we'll handle naming through other means
]
extension-pkg-allow_list = ["lxml.etree", "networkx"]

[tool.pylint.format]
max-line-length = 100

# Testing and Coverage
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=mtf --cov-report=term-missing --cov-fail-under=90"
testpaths = [
    "tests",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise AssertionError",
]
fail_under = 90

# Git commit message template
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

# Code complexity settings
[tool.radon]
exclude = "tests/*,venv/*,.git/*,.pytest_cache/*,__pycache__/*"
cc_min = "B"
mi_min = "B"
show_complexity = true
show_mi = true
show_raw = true
no_assert = true
order = true
total_average = true
